# ignore_manager

./: .coverage  .dockerignore  .gitignore  main.py  project_root_artifact_review.md  project_root_artifact_review_g.md  pyproject.toml
src/crewai_ignore_manager/: agents.py  cli.py  tasks.py
src/ignore_manager/: agents.py  cli.py  tasks.py  tools.py
tests/: test_cli.py
tests/dummy_project/: .dockerignore  .gitignore  project_root_artifact_review.md
