[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ignore_manager"
version = "0.1.0"
description = "A CrewAI tool to automate .gitignore and .dockerignore management"
authors = [
  { name="Antigravity", email="antigravity@example.com" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "crewai",
    "python-dotenv",
    "crewai-tools"
]

# below are optional dependencies for development
# install with pip install -e .[dev] (installs pytest, pytest-cov, pytest-mock along with the main dependencies)
# can be omitted for production using pip install -e . (without the [dev])
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock"
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]

[project.scripts]
ignore-manager = "ignore_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"] 

